# aoc2024-python

./: .gitignore  README.md  pyproject.toml
src/mysolution/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
src/mysolution/helpers/: cli.py
